# nixify

./: Cargo.toml  README.md  deny.toml  flake.nix
src/: cli.rs  errors.rs  lib.rs  main.rs
tests/: config.yaml  config_yaml_test.rs
