[package]
name = "nixify"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
error-stack = "0.6"
ser_nix = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = { version = "0.9.34", optional = true }
serde_yaml2 = { version = "0.1.3", optional = true }
thiserror = "2.0"
toml = "1.0.3"

[features]
default = ["serde_yaml"]
serde_yaml = ["dep:serde_yaml_ng"]
serde_yaml2 = ["dep:serde_yaml2"]
